...
    <string name="action_skip">Skip</string>
    <string name="action_dont_skip">Don\'t skip</string>
    <string name="action_collection_add">Add to collection</string>
    <string name="action_collection_remove">Remove from collection</string>
    <string name="action_collection_added">Added to collection</string>
    <string name="action_collection_removed">Removed from collection</string>
    <string name="action_watched">Set watched</string>
    <string name="action_unwatched">Set not watched</string>

    <!-- Shows -->
    <string name="confirm_delete">Remove %s?</string>
    <string name="delete_error">Could not remove show. Try again later.</string>
    <string name="delete_show">Remove</string>
...
    <string name="action_episode_notifications_on">Turn on episode notifications</string>
    <string name="action_episode_notifications_off">Turn off episode notifications</string>
    <string name="context_hide">Hide</string>
    <string name="context_unhide">Do not hide</string>
    <string name="hidden">Moved to hidden</string>
    <string name="unhidden">Show is visible again</string>
    <string name="action_shows_add">Add show</string>
    <string name="action_shows_filter">Filter shows</string>
    <string name="empty_filter">Remove all filters</string>
    <string name="action_shows_filter_favorites">Favorites</string>
    <string name="action_shows_filter_unwatched">Unwatched</string>
    <string name="action_shows_filter_upcoming">Upcoming</string>
    <string name="action_shows_filter_hidden">Hidden</string>
...
    <string name="pref_exactdates">Display exact dates</string>
    <string name="pref_exactdates_summary">\"October 31\" instead of \"in 3 days\"</string>
    <string name="pref_nospoilers">Prevent spoilers</string>
    <string name="pref_nospoilers_summary">Hide details until an episode is watched</string>
    <string name="pref_seasonsorting">Sort seasons by…</string>
    <string name="pref_episodesorting">Sort episodes by…</string>
    <string name="pref_language">Preferred content language</string>
    <string name="pref_language_fallback">Alternative language</string>
    <string name="pref_updatewifionly">Images via Wi-Fi only</string>
    <string name="pref_updatewifionlysummary">To reduce data charges, don\'t download over mobile or metered networks</string>

    <plurals name="days_before_plural">
        <item quantity="one">%d day before</item>
...
